--- a/stats.dance.jayloves.us.conf
+++ b/stats.dance.jayloves.us.conf
@@ -6,9 +6,19 @@ server {
         set $upstream http://$upstream_host:7074;
         include sites-available/snippets/jayloves-proxy.conf;
     }
-}
 
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/dance.jayloves.us/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/dance.jayloves.us/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+}
 server {
+    if ($host = stats.dance.jayloves.us) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
     listen 80;
     server_name stats.dance.jayloves.us;
 }
