add resolver to proxy block

--- a/snippets/jayloves-proxy.conf
+++ b/snippets/jayloves-proxy.conf
@@ -1,6 +1,10 @@
 # Common reverse proxy settings for jayloves.us vhosts.
 # Requires $upstream to be set by the caller.
 
+# Needed when proxy_pass target is provided via variables and may contain hostnames.
+resolver 127.0.0.53 valid=30s ipv6=off;
+resolver_timeout 5s;
+
 proxy_pass $upstream;
 proxy_set_header Host $host;
 proxy_set_header X-Real-IP $remote_addr;
